<?xml version="1.0" encoding="utf-8"?>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TimeAndExpenses"
        android:background="#FBFBFB">

        <LinearLayout
            android:id="@+id/linearlayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:text="@string/time_and_expenses"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/labelTravelTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/travel_time"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textTravelTime"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_style"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/labelWorkTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/work_time"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/textWorkStartTime"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_style"
                    android:hint="@string/time_input"
                    android:paddingLeft="5dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/textWorkEndTime"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/border_style"
                    android:hint="@string/time_input"
                    android:paddingLeft="5dp"
                    android:textAlignment="textStart"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelExpences"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/Expenses"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/extraExpenseButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/expenseLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/textCost"
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/border_style"
                        android:hint="@string/cost"
                        android:inputType="numberDecimal"
                        android:paddingLeft="5dp" />

                    <EditText
                        android:id="@+id/textDecriptionCost"
                        android:layout_width="200dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/border_style"
                        android:hint="@string/description"
                        android:paddingLeft="5dp" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/labelNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/notes"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textNotes"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_style"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/buttonSaveTimeAndExpences"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginTop="15dp"
                android:text="@string/save"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
