<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderDetail">

    <Button
        android:id="@+id/buttonOrderdetailLogout"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:text="Logga ut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/text_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/customerTextViewOrderDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="customer" />

        <TextView
            android:id="@+id/dateTextViewOrderDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="date" />

        <TextView
            android:id="@+id/addressTextViewOrderDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            tools:text="address" />

        <TextView
            android:id="@+id/workDescriptionTextViewOrderDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            tools:text="work description" />

        <TextView
            android:id="@+id/contactTextOrderDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/contact_text" />

        <TextView
            android:id="@+id/contactInfoTextViewOrderDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="14sp"
            tools:text="contact info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/acceptButtonOrderDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accept" />

            <Button
                android:id="@+id/declineButtonOrderDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorDeclineButton"
                android:text="@string/decline" />
        </LinearLayout>

        <Button
            android:id="@+id/finishedButtonOrderDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/work_finished" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>